# RS2-JENGA

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/motion_planning/lib/motion_planning/: exclusion_zones_node  pose_goal_node  rmrc_planning_node  robot_gui  test_rmrc_pose
install/motion_planning/share/motion_planning/: package.sh  package.xml
install/ur3e_controller/lib/ur3e_controller/: estop_node  initials_demo  move_ur3e_demo
install/ur3e_controller/share/ur3e_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur3e_controller/share/ur3e_controller/config/: ur3e_controllers.yaml
install/ur3e_controller/share/ur3e_controller/launch/: headless_moveit.launch.py  ur3e_sim_moveit.launch.py
log/: latest_build  latest_list
src/interaction_execution/: GUI.py  Overall.py
src/interaction_perception/: GUI.py  Goals.txt
src/jenga_interfaces/: CMakeLists.txt  README.md  package.xml
src/jenga_interfaces/action/: JengaArmReady.action  JengaExtractMiddleBlock.action  JengaExtractSideBlock.action  JengaPickPlace.action  JengaProbeBlock.action
src/jenga_interfaces/srv/: ProtrudeJengaBlock.srv  SetJengaBlocksLayout.srv
src/motion_planning/: README.md  package.xml  setup.py
src/motion_planning/config/: jenga_tower_layout.yaml  jenga_tower_mtc_layout.yaml  ur3e_workspace.yaml
src/motion_planning/launch/: jenga_tower.launch.py  motion_planning.launch.py  ur_onrobot_mtc_bringup.launch.py
src/motion_planning/motion_planning/: __init__.py  exclusion_zones_loader.py  jenga_blocks_scene.py  jenga_extract_middle_to_top_sequencer.py  jenga_tower_layout.py  jenga_tower_mtc_sequencer.py  jenga_tower_node.py  kinematics_backends.py  moveit_cartesian_node.py  moveit_planning.py  mtc_action_client.py  mtc_velocity_args.py  pose_goal_node.py  rmrc_planner.py  rmrc_planning_node.py  robot_gui.py  robot_state_bridge_node.py  test_mtc_pick_place.py  test_planner_pose.py  test_rmrc_pose.py
src/motion_planning/motion_planning/tests/: debug_modules.py  test_ik_solution.py  test_mtc_extract_middle.py  test_mtc_extract_middle_protruded.py  test_mtc_extract_side.py  test_mtc_pick_place.py  test_mtc_probe_block.py  test_rmrc_logic.py  test_rmrc_pose.py
src/mtc_jenga_servers/: CMakeLists.txt  README.md  package.xml
src/mtc_jenga_servers/config/: mtc_velocity_scaling.yaml
src/mtc_jenga_servers/include/mtc_jenga_servers/: mtc_server_common.hpp
src/mtc_jenga_servers/launch/: mtc_extract_servers.launch.py  mtc_probe_server.launch.py  mtc_server.launch.py
src/mtc_jenga_servers/src/: mtc_arm_ready_server.cpp  mtc_extract_middle_block_server.cpp  mtc_extract_side_block_server.cpp  mtc_pick_place_server.cpp  mtc_probe_block_server.cpp
src/mtc_pick_place/: CMakeLists.txt  package.xml
src/mtc_pick_place/config/: mtc_velocity_scaling.yaml
src/mtc_pick_place/include/mtc_pick_place/: mtc_server_common.hpp
src/mtc_pick_place/launch/: mtc_server.launch.py
src/mtc_pick_place/src/: mtc_extract_middle_block_server.cpp  mtc_extract_side_block_server.cpp  mtc_pick_place_server.cpp  mtc_probe_block_server.cpp
src/perception/: README.md  block_sizes.txt  box_colour_probe.py  box_percentages.py  colour_blobs.py  colour_identification.py  colour_mask_setup.py  colour_setup.py  depth_analysis.py  depth_confirm_setup.py  detect_box.py  detect_boxes.py  detect_edges.py  edge_analysis.py  edges_2.py  grid_generation.py  grid_slow.py  jenga_perception_colour.py  jenga_perception_consistent.py  jenga_perception_edges.py  jenga_perception_ros.py  layer_analysis.py  perception_config.py  perception_setup.sh  play.py  play2.py  play_bag.py  play_live.py  play_rgbd.py  play_runtime.py  realsense_viewer.py  requirements.txt  rviz_viewer.sh  saturation_mask.py  search_area_setup.py  tower_analysis.py  tower_mask.py  tower_setup.py
src/perception/camera_files/rgbd_raw/: live_20260317_162714.bag  live_20260317_163607.bag  live_20260317_164227.bag  live_20260317_164717.bag
src/perception/old/: analyze_box_colors.py  box_percentages.py  colour_blobs.py  colour_identification.py  config_slow.py  depth_analysis.py  jenga_perception_colour.py  jenga_perception_edges.py  jenga_perception_hsv_edges.py  roi_color_view.py  tower_analysis.py  update_box_colors.py
src/perception/setup/: colour_setup.py  search_area_setup.py  tower_setup.py
src/ur3_moveit_mixed/: CMakeLists.txt  README.md  package.xml
src/ur3_moveit_mixed/config/: fake_controllers.yaml  hardware_controllers.yaml  moveit.rviz
src/ur3_moveit_mixed/launch/: ur3_demo.launch.py  ur3_hardware.launch.py
src/ur3_moveit_mixed/scripts/: ur3_py_node.py
src/ur3_moveit_mixed/src/: ur3_cpp_node.cpp
src/ur3e_controller/: README.md  package.xml  setup.cfg  setup.py
src/ur3e_controller/config/: exclusion_zones_example.yaml  exclusion_zones_params.yaml  jenga_block_even.sdf  jenga_block_odd.sdf  ur3e_cabinet.yaml  ur3e_workspace.world  ur3e_workspace.yaml
src/ur3e_controller/launch/: demo.launch.py  headless_moveit.launch.py  motion_planning.launch.py  ur3e_hw_moveit.launch.py  ur3e_sim_control.launch.py  ur3e_sim_moveit.launch.py
src/ur3e_controller/resource/: rs2_jenga
src/ur3e_controller/ur3e_controller/: demo_node.py  estop_node.py  exclusion_zones_loader.py  force_torque_feedback.py  move_client.py  moveit_planning.py  pose_goal_node.py  robot_gui.py  spawn_jenga_tower.py
src/ur3e_controller/urdf/: ur3e_workspace.urdf.xacro
ur3_moveit_mixed/: CMakeLists.txt  package.xml
ur3_moveit_mixed/launch/: ur3_demo.launch.py
ur3_moveit_mixed/scripts/: ur3_py_node.py
ur3_moveit_mixed/src/: ur3_cpp_node.cpp
ur3e_controller/: CMakeLists.txt  README.md  package.xml
ur3e_controller/config/: kinematics.yaml
ur3e_controller/launch/: ur3e_hardware.launch.py  ur3e_sim.launch.py
ur3e_controller/src/: ur_node.cpp
