<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_planning</name>
  <version>0.1.0</version>
  <description>Motion planning for UR3e: RMRC planner, MoveIt interface, pose goals, and exclusion zones.</description>
  <maintainer email="user@example.com">RS2-JENGA</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Execution via ur3e_controller move_client -->
  <depend>ur3e_controller</depend>
  <depend>jenga_interfaces</depend>

  <!-- MoveIt for pose_goal_node (when use_rmrc=false) -->
  <exec_depend>ur_onrobot_control</exec_depend>
  <exec_depend>ur_onrobot_moveit_config</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>

  <!-- ur_description for robot_description when using RMRC -->
  <exec_depend>ur_description</exec_depend>
  <exec_depend>mtc_jenga_servers</exec_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pykdl</exec_depend>
  <exec_depend>kdl_parser_py</exec_depend>
  <exec_depend>urdf_parser_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
