<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mtc_jenga_servers</name>
  <version>0.1.0</version>
  <description>MoveIt Task Constructor action servers (C++) for Jenga: pick/place, extract side block, extract middle block, and probe block. Hosts the JengaPickPlace, JengaExtractSideBlock, JengaExtractMiddleBlock, and JengaProbeBlock action servers and a shared MTC helper header.</description>
  <maintainer email="user@example.com">RS2-JENGA</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>jenga_interfaces</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <exec_depend>moveit_task_constructor_capabilities</exec_depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
